syntax = "proto3";

package anti_brute_force;

option go_package = "./;api";

service AntiBruteForce {
  rpc Auth(AuthRequest) returns (AuthResponse) {}
  rpc Reset(ResetRequest) returns (EmptyResponse) {}
  rpc AddToBlackList(IpNetRequest) returns (EmptyResponse) {}
  rpc AddToWhiteList(IpNetRequest) returns (EmptyResponse) {}
  rpc RemoveFromBlackList(IpNetRequest) returns (EmptyResponse) {}
  rpc RemoveFromWhiteList(IpNetRequest) returns (EmptyResponse) {}
}

message AuthRequest {
  string login = 1;
  string password = 2;
  string ip = 3;
}

message AuthResponse {
  bool ok = 1;
}

message ResetRequest {
  string login = 1;
  string password = 2;
  string ip = 3;
}

message EmptyResponse {
}

message IpNetRequest {
  string inet = 1;
}
